code/force-app/main/default/objects/Personnel__c/Personnel__c.object-meta.xml
<CustomObject>
    <label>人員設定檔</label>
    <nameField>
        <displayFormat>P-{00000000}</displayFormat>
        <label>Personnel No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>