code/force-app/main/default/objects/Personnel__c/fields/Account_Limit__c.field-meta.xml
<CustomField>
    <fullName>Account_Limit__c</fullName>
    <defaultValue>30</defaultValue>
    <label>預佔上限名額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>