code/force-app/main/default/objects/Personnel__c/fields/Account_Remain_Quota__c.field-meta.xml
<CustomField>
    <fullName>Account_Remain_Quota__c</fullName>
    <formula>Account_Limit__c - Reserved_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>預佔剩餘名額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>