code/force-app/main/default/objects/Personnel__c/fields/Cust_Group__c.field-meta.xml
<CustomField>
    <fullName>Cust_Group__c</fullName>
    <formula>TEXT(Name__r.Customer_Segment__c)</formula>
    <label>客群</label>
    <type>Text</type>
</CustomField>