code/force-app/main/default/objects/Personnel__c/fields/Dept__c.field-meta.xml
<CustomField>
    <fullName>Dept__c</fullName>
    <formula>TEXT(Name__r.Team__c)</formula>
    <label>科別</label>
    <type>Text</type>
</CustomField>