code/force-app/main/default/objects/Personnel__c/fields/Dispatch_Case__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Case__c</fullName>
    <label>已分派案件</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>