code/force-app/main/default/objects/Personnel__c/fields/Emp_No__c.field-meta.xml
<CustomField>
    <fullName>Emp_No__c</fullName>
    <formula>Name__r.Employee_No__c</formula>
    <label>員編</label>
    <type>Text</type>
</CustomField>