code/force-app/main/default/objects/Personnel__c/fields/First_Level_Approver__c.field-meta.xml
<CustomField>
    <fullName>First_Level_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>一階審核人員</label>
    <referenceTo>User</referenceTo>
    <relationshipName>P_First_Level_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>