code/force-app/main/default/objects/Personnel__c/fields/Geo_Area__c.field-meta.xml
<CustomField>
    <fullName>Geo_Area__c</fullName>
    <formula>TEXT(Name__r.Area__c)</formula>
    <label>大地理區</label>
    <type>Text</type>
</CustomField>