code/force-app/main/default/objects/Personnel__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <formula>Name__r.Title</formula>
    <label>職稱</label>
    <type>Text</type>
</CustomField>