code/force-app/main/default/objects/Personnel__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>職員姓名</label>
    <referenceTo>User</referenceTo>
    <relationshipName>P_Name</relationshipName>
    <type>Lookup</type>
</CustomField>