code/force-app/main/default/objects/Personnel__c/fields/Reg_Code__c.field-meta.xml
<CustomField>
    <fullName>Reg_Code__c</fullName>
    <formula>TEXT(Name__r.Unit_Code__c)</formula>
    <label>區部代碼</label>
    <type>Text</type>
</CustomField>