code/force-app/main/default/objects/Personnel__c/fields/Reserved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>已預佔數量</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>