code/force-app/main/default/objects/Personnel__c/fields/Sec_Corr_Branch__c.field-meta.xml
<CustomField>
    <fullName>Sec_Corr_Branch__c</fullName>
    <label>第二順位對口分行</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Branch</valueSetName>
    </valueSet>
</CustomField>