code/force-app/main/default/objects/Personnel__c/fields/Second_Level_Approver__c.field-meta.xml
<CustomField>
    <fullName>Second_Level_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>二階審核人員</label>
    <referenceTo>User</referenceTo>
    <relationshipName>P_Second_Level_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>