code/force-app/main/default/objects/Personnel__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <formula>TEXT(Name__r.Unit__c)</formula>
    <label>區部</label>
    <type>Text</type>
</CustomField>