code/force-app/main/default/objects/Personnel__c/validationRules/Test.validationRule-meta.xml
<ValidationRule>
    <fullName>Test</fullName>
    <active>false</active>
    <errorConditionFormula>Account_Remain_Quota__c &lt;=  Account_Limit__c &amp;&amp;  Reserved_Amount__c &gt;0</errorConditionFormula>
    <errorMessage>人員設定檔預佔數量異常</errorMessage>
</ValidationRule>